--- a/src/main/resources/templates/my/home.html
+++ b/src/main/resources/templates/my/home.html
@@ -1,68 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">    
-    <title>롯데ON::대한민국 1등 온라인 쇼핑몰</title>    
-    <link rel="shortcut icon" type="image/x-icon" href="../../../../../../../LotteON%202.0/images/favicon.ico" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" th:href="@{/css/star-rating-svg.css}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <script th:src="@{/js/my/jquery.star-rating-svg.min.js}"></script>
-    <script th:src="@{/js/my/popup.js}"></script>
-    <link rel="stylesheet" th:href="@{/css/my.css}">
-</head>
-<body>
-    <div id="wrapper">        
-        <header>
-            <div class="top">
-                <div>
-                    <a href="./member/login.html">로그인</a>
-                    <a href="#">회원가입</a>
-                    <a href="#">마이페이지</a>
-                    <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-                </div>
-            </div>
-            <div class="logo">
-                <div>
-                    <a href="../../../../../../../LotteON%202.0/index.html"><img src="../../../../../../../LotteON%202.0/images/header_logo.png" alt="로고"/></a>
-                    <form action="#">
-                        <input type="text" name="search"/>
-                        <button><i class="fa fa-search"></i></button>
-                    </form>
-                </div>
-            </div>
-        </header>
-        <div id="my">
-            <nav>
-                <div>
-                    <a href="home.html"><img src="../../static/images/my/my_logo.jpg" alt="나의쇼핑정보"></a>
-
-                    <ol>
-                        <li><a href="#">주문·배송<span class="delivery">1</span></a></li>
-                        <li><a href="#">할인쿠폰<span class="coupon">1</span></a></li>
-                        <li><a href="#">포인트<span class="point">1,000</span></a></li>
-                        <li><a href="#">문의내역<span class="qna">1</span></a></li>
-                    </ol>
-
-                </div>
-            </nav>
-
-            <div class="home">
-				<ul>
-                    <span class="menu_else"></span>
-                    <li><a href="./ordered.html">전체주문내역</a></li>
-                    <!--<li><a href="./favorite.html">관심상품</a></li>-->
-                    <li><a href="point.html">포인트내역</a></li>
-                    <li><a href="coupon.html">쿠폰</a></li>
-                    <li><a href="review.html">나의리뷰</a></li>
-                    <li><a href="qna.html">문의하기</a></li>
-                    <li><a href="info.html">나의설정</a></li>
-                </ul>
-
-                <section>
-                    <a href="#"><img src="../../static/images/my/my_banner1.jpg" alt="패션, 타운 하나로 끝" class="banner"></a>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/fragments/my/my_layout :: content}">
+                <section layout:fragment="content">
+                    <a href="#"><img th:src="@{/images/my/my_banner1.jpg}" alt="패션, 타운 하나로 끝" class="banner"></a>
 
                     <article class="latest">
                         <h3>최근주문내역</h3>
@@ -247,7 +188,7 @@
                 <li><a href="#">전자금융거래약관</a></li>
             </ul>
             <div>
-                <p><img src="../../../../../../../LotteON%202.0/images/footer_logo.png" alt="로고"></p>
+                <p><img th:src="@{/images/footer_logo.png}" alt="로고"></p>
                 <p>
                   <strong>(주)LotteON</strong><br />
                   부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)<br />
