--- a/src/main/resources/templates/admin/cs/view.html
+++ b/src/main/resources/templates/admin/cs/view.html
@@ -3,6 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/admin/admin_layout.html}">
 <head>
+  <script th:src="@{/js/admin/cs_delete.js}"></script>
   <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
 </head>
 <section layout:fragment="content" th:id="${group}">
