--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -25,7 +25,59 @@
                 </p>
             </div>
         </header>
-        <script type="text/javascript">
+        <script>
+            $(function (){
+                const cate1 = $('#category1');
+                const cate2 = $('#category2');
+                let selectCate = null;
+
+                $(cate1).change(function() {
+                    const selectedCate1 = $(this).val();
+
+                    console.log(selectedCate1);
+
+                    const jsonData = {
+                        'prodCate1': selectedCate1
+                    }
+
+                    $.ajax({
+                        url: '/LotteOn/admin/product/register/category',
+                        type: 'post',
+                        data: JSON.stringify(jsonData),
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        success: function (data) {
+                            console.log(data);
+
+                            // 기존 옵션 제거
+                            cate2.empty();
+
+                            console.log('empty complete' + data);
+
+                            // "2차 분류 선택" 옵션 추가
+                            cate2.append($('<option>', {
+                                value: 'cate0',
+                                text: '2차 분류 선택'
+                            }));
+
+                            console.log('append complete' + data);
+                            // 받아온 JSON 데이터를 기반으로 2차 분류 옵션 추가
+                            for (let i = 0; i < data.cate2s.length; i++) {
+                                const category = data.cate2s[i];
+                                cate2.append($('<option>', {
+                                    value: category.cate2No,
+                                    text: category.c2Name
+                                }));
+                            }
+                        }
+                    });
+                });
+
+
+            });
+        </script>
+
+        <script>
             function changeSelect() {
 
              const selectValue = $('select[name=prodCate1]').val();
@@ -155,18 +207,23 @@
                                 <tr>
                                     <td>1차 분류</td>
                                     <td>
-                                        <select name="prodCate1" onchange="changeSelect()">
+                                        <select name="prodCate1" id="category1">
                                             <option value="0">1차 분류 선택</option>
-                                            <th:block th:each="cate1 : ${setCate1}">
+                                            <option value="10">패션·의류·뷰티</option>
+                                            <option value="11">가전·디지털</option>
+                                            <option value="12">식품·생필품</option>
+                                            <option value="13">홈·문구·취미</option>
+                                            <option value="14">도서·음반</option>
+                                            <!--<th:block th:each="cate1 : ${setCate1}">
                                                 <option th:value="${cate1.cate1}" th:text="${cate1.c1Name}"></option>
-                                            </th:block>
+                                            </th:block>-->
                                         </select>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>2차 분류</td>
                                     <td>
-                                        <select name="prodCate2">
+                                        <select name="prodCate2" id="category2">
                                             <option value="00">2차 분류 선택</option>
                                             <option value="10">남성의류</option>
                                             <option value="11">여성의류</option>
