--- a/src/main/resources/templates/product/order.html
+++ b/src/main/resources/templates/product/order.html
@@ -33,12 +33,12 @@
                         <td colspan="7">장바구니에 상품이 없습니다.</td>
                     </tr>
 
-                    <tr class="ordComplete" th:each="item:${itemDTOList}">
+                    <tr class="ordComplete" th:each="item, itemStat:${itemDTOList}">
                         <td>
                             <article>
-                                <a th:href="@{/product/view(prodCate1=${item.prodCate1},prodCate2=${item.prodCate2},prodNo=${item.prodNo})}"><img th:src="@{/thumbs/${item.prodCate1}/${item.prodCate2}/${item.thumb1}}" alt=""></a>
+                                <a th:href="@{/product/view(prodCate1=${item.prodCate1},prodCate2=${item.prodCate2},prodNo=${item.prodNo})}"><img th:src="@{/thumbs/}+${item.prodCate1}+'/'+${item.prodCate2}+'/'+${item.thumb1}" alt=""></a>
                                 <div>
-                                    <h2><a th:href="@{/product/view(prodCate1=${item.prodCate1},prodCate2=${item.prodCate2},prodNo=${item.prodNo})}" th:text="${item.prodName}">상품명</a></h2>
+                                    <h2><a th:name="'prodNo[' + ${itemStat.index} +']'" th:href="@{/product/view(prodCate1=${item.prodCate1},prodCate2=${item.prodCate2},prodNo=${item.prodNo})}" th:text="${item.prodName}">상품명</a></h2>
                                     <p th:text="${item.descript}">상품설명</p>
                                 </div>
                             </article>
@@ -47,6 +47,15 @@
                         <td th:text="${#numbers.formatInteger(item.price, 0, 'COMMA')}+'원'">27,000</td>
                         <td th:text="${#numbers.formatInteger(item.delivery, 0, 'COMMA')}+'원'" th:class="${item.delivery eq 0 ? 'free-delivery' : 'delivery'}">무료배송</td>
                         <td th:text="${#numbers.formatInteger(item.totalPrice, 0, 'COMMA')}+'원'">27,000</td>
+                        <td>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.prodNo'" th:value="${item.prodNo}"/>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.count'" th:value="${item.count}"/>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.price'" th:value="${item.price}"/>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.discount'" th:value="${item.discount}"/>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.point'" th:value="${item.point}"/>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.delivery'" th:value="${item.delivery}"/>
+                            <input type="hidden" th:name="'orderItemDTOList[' + ${itemStat.index} +']'+'.totalPrice'" th:value="${item.totalPrice}"/>
+                        </td>
                     </tr>
 
                     </tbody>
