--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -18,7 +18,7 @@
             <!-- 상품 전체 정보 내용 -->
             <article class="info">
                 <div class="image">
-                    <img th:src="@{/thumbs/pageRequestDTO.prodCate1/pageRequestDTO.prodCate2/product.thumb3}" alt="상품이미지"/>
+                    <img th:src="@{/thumbs/}+${pageRequestDTO.prodCate1}+'/'+${pageRequestDTO.prodCate2}+'/'+${product.thumb3}" alt="상품이미지"/>
                 </div>
                 <div class="summary">
                     <nav>
@@ -82,9 +82,7 @@
                     <h1>상품정보</h1>
                 </nav>
                 <!-- 상품상세페이지 이미지 -->
-                <img th:src="@{/thumbs/${pageRequestDTO.prodCate1}/${pageRequestDTO.prodCate2}/${product.detail}}" alt="상세페이지1">
-                <img src="https://via.placeholder.com/860x460" alt="상세페이지2">
-                <img src="https://via.placeholder.com/860x460" alt="상세페이지3">
+                <img th:src="@{/thumbs/}+${pageRequestDTO.prodCate1}+'/'+${pageRequestDTO.prodCate2}+'/'+${product.detail}" alt="상세페이지1">
             </article>
 
             <!-- 상품 정보 제공 고시 내용 -->
