--- a/src/main/resources/templates/policy/buyer.html
+++ b/src/main/resources/templates/policy/buyer.html
@@ -3,7 +3,7 @@
       layout:decorate="~{/fragments/policy/buyer_layout.html}">
 
             
-            <section class="buyer" layout:fragment="content">>
+            <section class="buyer" layout:fragment="content">
                 <nav>
                   <h1>LotteON 서비스 이용약관</h1>
                   <ul>
@@ -63,6 +63,6 @@
                 </article>
             </section>
 
-        </main>
+
 </html>
 
