--- a/src/main/resources/templates/fragments/policy/buyer_layout.html
+++ b/src/main/resources/templates/fragments/policy/buyer_layout.html
@@ -19,7 +19,7 @@
 <body>
 <div id="wrapper">
     <header>
-        <div class="top" th:fragment="loginBar">
+        <div class="top" th:fragment="~{/fragments/loginBar}">
 
         </div>
         <div class="logo">
