--- a/src/main/resources/templates/cs/notice/view.html
+++ b/src/main/resources/templates/cs/notice/view.html
@@ -4,7 +4,7 @@
       layout:decorate="~{/fragments/cs/cs_layout.html}">
   <article layout:fragment="content">
     <nav>
-      <h2 class="title">[[${view.cate2.wrapping}]] [[${view.title}]]</h2>
+      <h2 class="title">[[${view.title}]]</h2>
       <span class="date">[[${view.yyyyMMdd}]]</span>
     </nav>
 
