--- a/src/main/resources/templates/admin/cs/reply.html
+++ b/src/main/resources/templates/admin/cs/reply.html
@@ -4,6 +4,16 @@
       layout:decorate="~{/fragments/admin/admin_layout.html}">
 <head>
   <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+  <script>
+    $(function() {
+      $('.btnWrite').click(function(e) {
+        e.preventDefault();
+        if(confirm('답변을 등록하시겠습니까?')) {
+          $('#rep').submit();
+        }
+      });
+    });
+  </script>
 </head>
 <section layout:fragment="content" th:id="${group}">
 
@@ -15,40 +25,44 @@
   </nav>
 
   <article id="reply">
+    <form th:action="@{/admin/cs/write}" method="post" id="rep">
+      <input type="hidden" name="parent"  th:value="${view.no}">
+      <input type="hidden" name="group"   th:value="${view.group.group}">
+      <input type="hidden" name="cate1"   th:value="${view.cate1.cate1}">
+      <input type="hidden" name="cate2"   th:value="${view.cate2.cate2}">
+      <input type="hidden" name="title"   th:value="${view.title}">
+      <table>
+        <tr>
+          <td>유형</td>
+          <td>
+            [[${view.cate1.cate1_name}]] - [[${view.cate2.cate2_name}]]
+          </td>
+        </tr>
 
-    <table>
-      <tr>
-        <td>유형</td>
-        <td>
-          고객서비스
-        </td>
-      </tr>
+        <tr>
+          <td>제목</td>
+          <td th:utext="${view.brTitle}">
 
-      <tr>
-        <td>제목</td>
-        <td>
-          개인회원간 법인회원에 차이가 있나요?
-        </td>
-      </tr>
+          </td>
+        </tr>
 
-      <tr>
-        <td>내용</td>
-        <td>
-          <p>
-            개인회원은 본인인증, 법인회원은 사업자등록번호를<br>
-            기준으로 사업자 인증 후 가입 가능합니다.
-          </p>
-        </td>
-      </tr>
+        <tr>
+          <td>내용</td>
+          <td>
+            <p th:utext="${view.brContent}">
 
-      <tr>
-        <td>답변</td>
-        <td>
-          <textarea placeholder="답변을 입력해주세요."></textarea>
-        </td>
-      </tr>
-    </table>
+            </p>
+          </td>
+        </tr>
 
+        <tr>
+          <td>답변</td>
+          <td>
+            <textarea name="content" placeholder="답변을 입력해주세요."></textarea>
+          </td>
+        </tr>
+      </table>
+    </form>
     <div id="buttons">
       <a href="#" class="btnDelete">삭제</a>
       <a href="#" class="btnWrite">답변등록</a>
