--- a/src/main/resources/templates/policy/buyer.html
+++ b/src/main/resources/templates/policy/buyer.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/fragments/policy/buyer_layout.html}">
+      layout:decorate="~{/fragments/policy/policy_layout.html}">
 
             
             <section class="buyer" layout:fragment="content">
@@ -18,7 +18,7 @@
                   <h2>구매회원 이용약관</h2>
                   <p>
                     <span class="tit">제1조(목적)</span>
-                    <span class="content">이 약관은 주식회사 롯데ON(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.gmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.</span>
+                    <span th:class="@{/policy/buyer}">이 약관은 주식회사 롯데ON(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.gmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.</span>
                   </p>
                   <p>
                     <span class="tit">제2조(약관의 명시, 효력과 개정)</span>
