--- a/src/main/resources/templates/policy/privacy.html
+++ b/src/main/resources/templates/policy/privacy.html
@@ -1,120 +1,8 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>구매회원 약관</title>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
-    <link rel="stylesheet" th:href="@{/css/common.css}" />
-    <link rel="stylesheet" th:href="@{/css/policy.css}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>    
-</head>
-<body>
-    <div id="wrapper">
-        <header>
-          <div class="top">
-            <div>
-                <a href="#">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#">마이페이지</a>
-                <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-            </div>
-        </div>
-        <div class="logo">
-            <div>
-                <a href="#"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
-                <form action="#">
-                    <input type="text" name="search"/>
-                    <button><i class="fa fa-search"></i></button>
-                </form>                
-            </div>            
-        </div>
-            <div class="menu">
-                <div>
-                    <ul>
-                        <li><a href="#">히트상품</a></li>
-                        <li><a href="#">추천상품</a></li>
-                        <li><a href="#">최신상품</a></li>
-                        <li><a href="#">인기상품</a></li>
-                        <li><a href="#">할인상품</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">공지사항</a></li>
-                        <li><a href="#">자주묻는질문</a></li>
-                        <li><a href="#">문의하기</a></li>
-                        <li><a href="#">고객센터</a></li>
-                    </ul>
-                </div>
-            </div>
-        </header>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/fragments/policy/policy_layout.html}">
 
-        <main id="termsPolicy">
-            <aside>
-                <!-- 카테고리 -->
-                <ul class="category">
-                  <li><i class="fa fa-bars" aria-hidden="true"></i>카테고리</li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-tshirt"></i>패션·의류·뷰티<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">남성의류</a></li>
-                      <li><a href="#">여성의류</a></li>
-                      <li><a href="#">잡화</a></li>
-                      <li><a href="#">뷰티</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-laptop"></i>가전·디지털<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">노트북/PC</a></li>
-                      <li><a href="#">가전</a></li>
-                      <li><a href="#">휴대폰</a></li>
-                      <li><a href="#">기타</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-utensils"></i>식품·생필품<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">신선식품</a></li>
-                      <li><a href="#">가공식품</a></li>
-                      <li><a href="#">건강식품</a></li>
-                      <li><a href="#">생필품</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-home"></i>홈·문구·취미<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">가구/DIY</a></li>
-                      <li><a href="#">침구·커튼</a></li>
-                      <li><a href="#">생활용품</a></li>
-                      <li><a href="#">사무용품</a></li>
-                    </ol>
-                  </li>
-                </ul>
-            </aside>
-            
-            <section class="buyer">
+            <section class="buyer" layout:fragment="content">
                 <nav>
                   <h1>LotteON 서비스 이용약관</h1>
                   <ul>
@@ -173,33 +61,4 @@
                   </p>
                 </article>
             </section>
-
-        </main>
-
-        <footer>
-          <ul>
-            <li><a href="#">회사소개</a></li>
-            <li><a href="#">서비스이용약관</a></li>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">전자금융거래약관</a></li>
-          </ul>
-          <div>
-              <p><img src="@{/images/footer_logo.png}" alt="로고" /></p>
-            <p>
-              <strong>(주)롯데ON</strong><br />
-              서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
-              대표이사 : 김사무엘상현, 정준호, 강성현<br />
-              사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br />
-              통신판매업 신고 : 서울송파 제0158호<br>
-              호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
-            </p>
-            <p>
-              <strong>고객센터</strong><br />
-              Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
-              Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
-            </p>
-          </div>
-        </footer>
-    </div>
-</body>
 </html>
