--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -14,7 +14,7 @@
 				<input type="hidden" name="type" th:value="${type}">
 				<section>
 					<h3><span class="essential">(필수)</span>케이마켓 이용약관</h3>
-					<textarea class="terms" readonly th:text="${sign.terms}"></textarea>
+					<textarea class="terms" readonly th:text="${type == 'seller' ? sign.seller : sign.terms}"></textarea>
 					<label><input type="checkbox" name="agree1" />동의합니다.</label>
 
 					<h3><span class="essential">(필수)</span>전자금융거래 이용약관</h3>
@@ -24,6 +24,12 @@
 					<h3><span class="essential">(필수)</span>개인정보 수집동의</h3>
 					<textarea class="privacy" readonly th:text="${sign.privacy}"></textarea>
 					<label><input type="checkbox" name="agree3" />동의합니다.</label>
+
+					<th:block th:if="${type != 'normal'}">
+						<h3><span class="essential">(필수)</span>전자금융거래 이용약관</h3>
+						<textarea class="privacy" readonly th:text="${sign.tax}"></textarea>
+						<label><input type="checkbox" name="agree5" />동의합니다.</label>
+					</th:block>
 				</section>
 
 				<section>
