--- a/src/main/resources/templates/fragments/admin/admin_footer.html
+++ b/src/main/resources/templates/fragments/admin/admin_footer.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <footer th:fragment="admin_footer">
   <div>
-    <p>Copyright ©lotteon.com All rights reserved. ADMINISTRATOR App Version : 여기 버전입니다</p>
+    <p>Copyright ©lotteon.com All rights reserved. ADMINISTRATOR App Version : [[${appInfo}]]</p>
   </div>
 </footer>
 </html>
