--- a/src/main/resources/templates/product/complete.html
+++ b/src/main/resources/templates/product/complete.html
@@ -47,36 +47,6 @@
                         <td>1</td>
                         <td>16,000원</td>
                     </tr>
-                    <tr>
-                        <td>
-                            <article>
-                                <img src="https://via.placeholder.com/80x80" alt="">
-                                <div>
-                                    <h2><a href="#">상품명</a></h2>
-                                    <p>상품설명</p>
-                                </div>
-                            </article>
-                        </td>
-                        <td>17,000원</td>
-                        <td>1,000원</td>
-                        <td>1</td>
-                        <td>16,000원</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <article>
-                                <img src="https://via.placeholder.com/80x80" alt="">
-                                <div>
-                                    <h2><a href="#">상품명</a></h2>
-                                    <p>상품설명</p>
-                                </div>
-                            </article>
-                        </td>
-                        <td>17,000원</td>
-                        <td>1,000원</td>
-                        <td>1</td>
-                        <td>16,000원</td>
-                    </tr>
 
                     <tr class="total">
                         <td colspan="4"></td>
@@ -84,19 +54,19 @@
                             <table border="0">
                                 <tr>
                                     <td>총 상품금액</td>
-                                    <td><span>34,000</span>원</td>
+                                    <td><span th:text="${order.ordPrice}">34,000</span>원</td>
                                 </tr>
                                 <tr>
                                     <td>총 할인금액</td>
-                                    <td><span>-2,000</span>원</td>
+                                    <td><span th:text="${order.ordDiscount}">-2,000</span>원</td>
                                 </tr>
                                 <tr>
                                     <td>배송비</td>
-                                    <td><span>3,000</span>원</td>
+                                    <td><span th:text="${order.ordDelivery}">3,000</span>원</td>
                                 </tr>
                                 <tr>
                                     <td>총 결제금액</td>
-                                    <td><span>35,000</span>원</td>
+                                    <td><span th:text="${order.ordTotPrice}">35,000</span>원</td>
                                 </tr>
                             </table>
                         </td>
@@ -110,9 +80,9 @@
                 <table border="0">
                     <tr>
                         <td>주문번호</td>
-                        <td>2008101324568</td>
+                        <td th:text="${order.ordNo}">2008101324568</td>
                         <td rowspan="3">총 결제금액</td>
-                        <td rowspan="3"><span>35,000</span>원</td>
+                        <td rowspan="3" th:text="${order.ordTotPrice}"><span>35,000</span>원</td>
                     </tr>
                     <tr>
                         <td>결제방법</td>
