--- a/src/main/resources/templates/my/qna.html
+++ b/src/main/resources/templates/my/qna.html
@@ -8,6 +8,9 @@
             어사이드 영역
             -->
         </ul>
+        <head>
+            <script th:src="@{/js/my/qnaShow.js}"></script>
+        </head>
 
         <section>
             <a href="#"><img th:src="@{/images/my/my_banner2.png}" alt="패션, 타운 하나로 끝" class="banner"></a>
